2013-06-06  Ramon Casero  <rcasero@gmail.com>

	* matlab/CgalToolbox/CgalClosestTriFacet.cpp: (0.1.3)
	* matlab/CgalToolbox/cgal_closest_trifacet.m: (0.1.1)
	* matlab/ManifoldToolbox/closest_trifacet.m: (0.2.2)

	- Add note to help header comparing speeds.

	* matlab/CgalToolbox/CgalClosestTriFacet.cpp: (0.1.2)

	- Compute the distance directly from the closest point result
	instead of running tree.squared_distance(), which is redundant.

	- I had forgotten to comment out some debug code.

	* matlab/test/test_closest_trifacet.m: (0.3.1)

	Fix bug. I had the wrong function name in the Right Ventricle
	example, calling cgal_closest_trifacet() instead of
	closest_trifacet().

	* matlab/MatlabImageHeader.cxx: (0.1.1)
	* matlab/GerardusCommon.h: (9.0.2)
	* matlab/MatlabExportFilter.hxx: (0.2.1)

	- Small adjustments to remove some compilation errors under
	VisualStudio 10 in Windows.

	* Delete cpp/src/third-party/CGAL-4.2/examples:
	* Delete cpp/src/third-party/CGAL-4.2/demo:
	* Delete cpp/src/third-party/CGAL-4.2/doc_html:

	- Unnecessary to build the project, just make checking out the
	project slower.

2013-06-05  Ramon Casero  <rcasero@gmail.com>

	* Delete cpp/src/third-party/CGAL-4.0.2:
	* Delete cpp/src/third-party/gmp-5.0.5:
	* Delete cpp/src/third-party/mpfr-3.1.1:

	- We have upgraded to new versions of these libraries.

	* matlab/CgalToolbox/CMakeLists.txt: (0.2.1)

	- Update path to CGAL, as we are now using a new version (4.2)
	with a different directory name.

	* matlab/ItkToolbox/CMakeLists.txt: (0.5.8)

	- Add dependency to compiler_config.h, a header file generated by
	CGAL and only available once CGAL has installed.

	* cpp/src/CMakeLists.txt: (0.2.5)

	- after CGAL builds, we need to copy the header file
	compiler_config.h it generates to the CGAL include directory, so
	that it's available for the other sub-projects that use CGAL
	(e.g. itk_imfilter).

	* matlab/ItkToolbox/CMakeLists.txt: (0.5.7)
